# neutron

./: .gitignore  .gitmodules  .quark  BOX_README.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  DOCS.md  DOCUMENTATION_UPDATE.md  EXCEPTION_HANDLING.md  FIXES.md  INSTALLER_UPDATES.md  LICENSE  Makefile  Makefile.backup  README.md  RELEASE_NOTES.md  SECURITY.md  TECHNICAL_DOCS.md  clean.py  comprehensive_debug_manual.out  copy_dlls.ps1  create_release.sh  debug_file.cpp  demo.sh  fix_vm.py  hello.nt  install_deps.py  install_deps.sh  installer.nsi  libneutron_runtime.so.1.0.3  libneutron_runtime.so.1.0.4  main.nt  main_test.nt  make_release.sh  neutron-module.toml  package.py  (+34 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  build-qr-module.yml  build.yml  ci.yml  code-quality.yml  release.yml
Axity/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
Axity/benchmarks/: results.csv  run_benchmarks.bat  run_benchmarks.sh
Axity/changelog/: changes.md
Axity/examples/: any.ax  arrays_index_len.ax  bitwise.ax  classes_methods.ax  comments.ax  comparisons.ax  conditionals.ax  exceptions.ax  floats_trig.ax  functions.ax  functions_returns.ax  hello.ax  iife_and_buffers.ax  import_functions.ax  import_main.ax  io_files.ax  io_json.ax  io_toml_env.ax  logical.ax  loops.ax  loops_do_for.ax  maps.ax  match_blocks.ax  mixed.ax  objects.ax  operators.ax  pretty.ax  printing_interpolation.ax  retry.ax  strings.ax  variables.ax
Axity/src/: lib.rs  main.rs
Axity/tests/: any.rs  bitwise.rs  comparisons.rs  exceptions.rs  floats.rs  iife_buffers.rs  imports.rs  integration.rs  lambda.rs  lexer.rs  logical.rs  loops.rs  match.rs  objects.rs  operators.rs  parser.rs  printing.rs  retry.rs  returns.rs
benchmark/: README.md  arithmetic.nt  arithmetic.py  conditionals.nt  conditionals.py  functions.nt  functions.py  run_all.nt  run_all_python.py  string.nt  string.py  time.nt  time.py  variables.nt  variables.py
benchmarks/: README.md  run_benchmark.py
benchmarks/axity/: ackermann.ax  list_ops.ax  primes.ax  recursion.ax  sorting.ax  string_ops.ax
benchmarks/javascript/: ackermann.js  binary_search.js  binary_trees.js  bitwise.js  classes.js  dict_ops.js  fibonacci.js  hashmap.js  json_ops.js  linked_list.js  list_ops.js  loops.js  mandelbrot.js  math.js  matrix.js  nbody.js  nested_loops.js  objects.js  primes.js  raytracer.js  recursion.js  reduction.js  regex.js  sorting.js  string_concat.js  string_ops.js  strings.js  tree_traversal.js
benchmarks/neutron/: ackermann.nt  binary_search.nt  binary_trees.nt  bitwise.nt  classes.nt  dict_ops.nt  fibonacci.nt  hashmap.nt  json_ops.nt  linked_list.nt  list_ops.nt  loops.nt  (+17 more)
box/: box.md  my_lib.nt
cmake/: toolchain-aarch64.cmake
dev_tests/: binary_conversion_feature_test.nt  class_test.nt  debug_module.nt  debug_my_utils.nt  debug_var_access.nt  exact_copy_test.nt  feature_test.nt  feature_test.nt.out  load_only.nt  module_test.nt  my_utils.nt  no_access_test.nt  simple_fib.nt  test_func_call.nt  test_module_load.nt
docs/: BUILD.md  DOCUMENTATION_UPDATE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TEST_SUITE.md  binary_conversion.md  box_modules.md  cross_platform.md  extending-neutron.md  implementation_status.md  known_issues.md  language_reference.md  minimal_box_example.md  module_system.md  nexus_module.md  performance.md  readme.md  test.nt  type_system.md
examples/: advanced.nt  advanced_working.nt  classes.nt  comprehensive.nt  convert_test.nt  debug_string.nt  dot_notation.nt  for_loop.nt  functions.nt  hello.nt  http_example.nt  logical_operators.nt  math_test.nt  parallel_fibonacci.nt  performance_test.nt  simple_example.nt  simple_import.nt  simple_math.nt  simple_string.nt  simple_var.nt  working_example.nt
include/: array.h  bytecode.h  c_api.h  callable.h  capi.h  class.h  compiler.h  debug.h  environment.h  expr.h  instance.h  module.h  module_registry.h  parser.h  stmt.h  token.h  value.h  vm.h
lib/: crypto.nt  fmt.nt  hello_module.nt  http.nt  json.nt  math.nt  path.nt  random.nt
logs/: v1.0.2-alpha.md  v1.0.3-alpha.md  v1.0.4-alpha.md  v1.1.0-beta.md  v1.1.1-beta.md  v1.1.2-beta.md  v1.1.3-beta.md  v1.2.1-beta.md  v2.0.0-beta.md
lsp/: json_compat.h  main.cpp  protocol.cpp  protocol.h  server.cpp  server.h
neutron-linux-x64/: README.md  install.sh  neutron
neutron-macos-intel/: neutron
programs/: README.md  fibonacci.nt  quiz  quiz.nt  sys_example.nt  test_input.nt  while_examples.nt  while_threshold_demo.nt
release/: README.md  README_RELEASE.md
scripts/: README.md  build_all.ps1  build_all.sh  check-lsp-compatibility.sh  fix-lsp.bat  fix-lsp.sh  install.sh  make_release.ps1  make_release.sh  setup-compiler-windows.ps1
src/: array.cpp  bytecode.cpp  bytecode_runner.cpp  c_api.cpp  capi.cpp  compiler.cpp  debug.cpp  environment.cpp  main.cpp  module_loader.cpp  module_registry.cpp  module_utils.cpp  parser.cpp  runtime.cpp  scanner.cpp  token.cpp  value.cpp  vm.cpp  vm.cpp.backup
test_package/: install.sh
testing/: main.nt
tests/: Makefile  README.md  binary_conversion_test.nt  binary_conversion_test.out  binary_conversion_test.out_main.cpp  box_base64_test.nt  comprehensive_test.nt  comprehensive_test.nt.out  debug_tokens.cpp  global_test.nt  minimal_test.nt  run_tests.py  simple_test.nt  simple_test.nt.out  string_extract_test  string_extract_test.cpp  string_test  string_test.cpp  test_array_operations.nt  test_async_module.nt  test_classes.nt  test_control_flow.nt  test_dot.cpp  test_elif.nt  test_elif_direct.nt  test_error_handling.nt  test_for_loops.nt  test_http_module.nt  test_if.nt  test_if_else.nt  test_import.cpp  test_math_module.nt  test_module_test.nt  test_objects.nt  test_operators.nt  test_scanner.cpp  test_sys_module.nt  test_truthiness.nt  test_variables.nt
vscode-extension/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  quark-language-configuration.json  tsconfig.json
(+483 files in other folders)
